static/css/base.css
html {
    height: 100%;
}

.header-container {
    padding-top: 100px;
}

.nobreak { 
    white-space: nowrap;
}

/* -------------------------------- Colour Scheme */

header a:hover {
    color: #ffffff;
    text-decoration: none;
}

.light-shade {
    color: #F5F7F7;
}

.light-shade-background {
    background-color: #F5F7F7;
}

.light-accent {
    color: #F3926C;
}

.light-accent-background {
    background-color: #F3926C;
}

.main-brand {
    color: #B1ADBD;
}

.main-brand-background {
    background-color: #B1ADBD;
}

.dark-accent {
    color: #5FABC4;
}

.dark-accent-background {
    background-color: #5FABC4;
}

.dark-shade {
    color: #5973B6;
}

.dark-shade-background {
    background-color: #5973B6;
}


/* -------------------------------- Toasts */
.message-container {
    position: fixed;
    right: 20px;
    top: 70px;
    z-index: 99999999999;
}

/* --------------------------------  Allauth form formatting */

.allauth-form-inner-content p {
    margin-top: 1.5rem; /* mt-4 */
    color: #6c757d; /* text-secondary */
}

.allauth-form-inner-content input {
    border-color: #000;
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content .btn {
    color: #fff;
    background-color: #6c757d;
    border-color: #6c757d;
    display: inline-block;
    font-weight: 400;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    border: 1px solid transparent;
    padding: 0.375rem 0.75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0.25rem;
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
	/* btn */
    color: #fff;
    background-color: #007bff;
    border-color: #007bff;
    display: inline-block;
    font-weight: 400;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    border: 1px solid transparent;
    padding: 0.375rem 0.75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0.25rem;

    /* standard bootstrap btn transitions */
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {	
	color: #fff;
    background-color: #0069d9;
    border-color: #0062cc;
}

.allauth-form-inner-content a {
	color: #17a2b8; /* text-info */
}


/* -------------------------------- Product Form */

.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #dc3545;
    border-radius: 0;
}




/* -------------------------------- Media Queries */


/* ----- For Larger ----- */

/* Add space push content down clearing the header */
@media (min-width: 992px) {
    .header-container {
        padding-top: 150px;
    }


}

/* ----- For smaller ----- */
@media (max-width: 992px) {
    header a:hover {
        color: #5973B6;
        text-decoration: none;
    }
}

